WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240467
jsc's settimeout should h properly handle a delay
https://bugs.webkit.org/show_bug.cgi?id=240467
Summary
jsc's settimeout should h properly handle a delay
Keith Miller
Reported
2022-05-16 10:52:16 PDT
Right now the second parameter of settimeout in the shell is ignored we should treat is as a delay like on the web.
Attachments
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2022-05-16 10:55:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/641
Alexey Proskuryakov
Comment 2
2022-05-16 17:13:01 PDT
***
Bug 240465
has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 3
2022-05-23 10:53:14 PDT
<
rdar://problem/93771307
>
EWS
Comment 4
2022-06-09 12:06:04 PDT
Committed
r295428
(
251434@main
): <
https://commits.webkit.org/251434@main
> Reviewed commits have been landed. Closing PR #641 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug