jsc's settimeout should properly handle a delay https://bugs.webkit.org/show_bug.cgi?id=240467

Reviewed by Yusuke Suzuki.

This patch makes it so that we properly handle a timeout passed to the JSC CLI setTimeout API. Previously we would just run the callback on the next runloop tick regardless of the passed value.

* Source/JavaScriptCore/jsc.cpp:
(JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/251434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295428 268f45cc-cd09-0410-ab3c-d52691b4dbfc