Source/JavaScriptCore/jsc.cpp
@@ -2525,13 +2525,21 @@ JSC_DEFINE_HOST_FUNCTION(functionSetTimeout, (JSGlobalObject* globalObject, Call
     if (!callback)
         return throwVMTypeError(globalObject, scope, "First argument is not a JS function"_s);
 
-    // FIXME: We don't look at the timeout parameter because we don't have a schedule work later API.
     auto ticket = vm.deferredWorkTimer->addPendingWork(vm, callback, { });
-    vm.deferredWorkTimer->scheduleWorkSoon(ticket, [callback](DeferredWorkTimer::Ticket) {
-        JSGlobalObject* globalObject = callback->globalObject();
-        MarkedArgumentBuffer args;
-        call(globalObject, callback, jsUndefined(), args, "You shouldn't see this..."_s);
-    });
+    auto dispatch = [callback, ticket] {
+        callback->vm().deferredWorkTimer->scheduleWorkSoon(ticket, [callback](DeferredWorkTimer::Ticket) {
+            JSGlobalObject* globalObject = callback->globalObject();
+            MarkedArgumentBuffer args;
+            call(globalObject, callback, jsUndefined(), args, "You shouldn't see this..."_s);
+        });
+    };
+
+    JSValue timeout = callFrame->argument(1);
+    if (timeout.isNumber() && timeout.asNumber())
+        RunLoop::current().dispatchAfter(Seconds::fromMilliseconds(timeout.asNumber()), WTFMove(dispatch));
+    else
+        dispatch();
+
     return JSValue::encode(jsUndefined());
 }
 
